--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   ],
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@ant-design/pro-components": "1.1.1",
+    "@ant-design/pro-components": "^1.1.5",
     "@umijs/route-utils": "^2.0.0",
     "antd": "^4.20.0",
     "classnames": "^2.3.0",
@@ -68,6 +68,7 @@
     "react-dev-inspector": "^1.7.0",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.2.0",
+    "tyarn": "^0.3.8",
     "umi": "^3.5.0"
   },
   "devDependencies": {
@@ -89,6 +90,7 @@
     "@umijs/preset-ant-design-pro": "^1.3.0",
     "@umijs/preset-dumi": "^1.1.0",
     "@umijs/preset-react": "^2.1.0",
+    "@umijs/preset-ui": "^2.2.9",
     "cross-env": "^7.0.0",
     "cross-port-killer": "^1.3.0",
     "detect-installer": "^1.0.0",
