--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "@ant-design/pro-table": "^2.78.3",
     "@umijs/route-utils": "^2.0.0",
     "antd": "^4.20.0",
+    "array-move": "latest",
     "classnames": "^2.3.0",
+    "immutability-helper": "^3.1.1",
     "lodash": "^4.17.0",
     "moment": "^2.29.0",
     "omit.js": "^2.0.2",
@@ -70,12 +72,13 @@
     "rc-util": "^5.16.0",
     "react": "^17.0.0",
     "react-dev-inspector": "^1.7.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.2.0",
+    "react-sortable-hoc": "latest",
     "tyarn": "^0.3.8",
-    "umi": "^3.5.0",
-    "array-move": "latest",
-    "react-sortable-hoc": "latest"
+    "umi": "^3.5.0"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.1.0",
