--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.2.0",
+    "react-highlight-words": "^0.18.0",
     "react-sortable-hoc": "latest",
     "tyarn": "^0.3.8",
     "umi": "^3.5.0"
