--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.2.0",
     "react-highlight-words": "^0.18.0",
+    "react-router-cache-route": "^1.12.11",
     "react-sortable-hoc": "latest",
     "tyarn": "^0.3.8",
     "umi": "^3.5.0"
