--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
     "not ie <= 10"
   ],
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-components": "^1.1.5",
     "@ant-design/pro-descriptions": "^1.11.15",
     "@ant-design/pro-form": "^1.72.0",
     "@ant-design/pro-layout": "^6.38.17",
     "@ant-design/pro-table": "^2.78.3",
+    "@antv/f2": "^4.0.42",
     "@umijs/route-utils": "^2.0.0",
     "antd": "^4.20.0",
     "array-move": "latest",
