--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-highlight-words": "^0.18.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-cache-route": "^1.12.11",
     "react-sortable-hoc": "latest",
     "umi-plugin-keep-alive": "^0.0.1-beta.35"
