--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "array-move": "^4.0.0",
     "classnames": "^2.3.2",
     "immutability-helper": "^3.1.1",
+    "katex": "^0.16.19",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "omit.js": "^2.0.2",
@@ -80,6 +81,7 @@
     "@types/express": "^4.17.17",
     "@types/history": "^4.7.11",
     "@types/jest": "^29.4.0",
+    "@types/katex": "^0.16.7",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
