--- a/package.json
+++ b/package.json
@@ -52,13 +52,16 @@
     "@ant-design/use-emotion-css": "1.0.4",
     "@umijs/route-utils": "^2.2.2",
     "antd": "^5.2.2",
+    "antd-style": "^3.7.1",
     "array-move": "^4.0.0",
     "classnames": "^2.3.2",
     "file-saver": "^2.0.5",
     "immutability-helper": "^3.1.1",
     "katex": "^0.16.19",
+    "l7-react": "^0.3.23",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "numeral": "^2.0.6",
     "omit.js": "^2.0.2",
     "rc-menu": "^9.8.2",
     "rc-util": "^5.27.2",
@@ -74,7 +77,14 @@
     "react-router-cache-route": "^1.12.11",
     "react-sortable-hoc": "latest",
     "umi-plugin-keep-alive": "^0.0.1-beta.35",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "@ant-design/plots": "^2.1.5",
+    "@antv/l7": "^2.20.13",
+    "@antv/l7-maps": "^2.20.13",
+    "@antv/l7-react": "^2.4.3",
+    "dayjs": "^1.11.10",
+    "querystring": "^0.2.1",
+    "react-fittext": "^1.0.0"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.1.5",
